demo/traefikee/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: traefikee-data-svc
  namespace: traefikee
spec:
  externalTrafficPolicy: Cluster
  ports:
  - name: http
    port: 80
    protocol: TCP
    targetPort: 80
  - name: https
    port: 443
    protocol: TCP
    targetPort: 443
  selector:
    app: traefikee
    component: proxies
  sessionAffinity: None
  type: LoadBalancer
